--- a/package.json
+++ b/package.json
@@ -6,35 +6,30 @@
   "directories": {
     "example": "example"
   },
-  "dependencies": {
+  "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.8",
     "babel-plugin-external-helpers": "^6.18.0",
+    "babel-plugin-syntax-async-generators": "^6.13.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
-    "babel-preset-es2015-rollup": "^1.2.0",
     "babel-register": "^6.18.0",
     "babelrc-rollup": "^3.0.0",
     "buble": "^0.14.2",
-    "director": "^1.2.8",
     "eslint": "^3.11.1",
-    "event-class": "^0.1.3",
-    "events": "^1.1.1",
-    "fs": "^0.0.1-security",
-    "hyperx": "^2.0.5",
-    "jquery": "^3.1.1",
+    "fs": "0.0.1-security",
     "lodash": "^4.17.2",
-    "object.observe": "^0.2.6",
-    "perfect-scrollbar": "^0.6.14",
-    "rollup-plugin-async": "^1.2.0",
     "rollup": "^0.36.4",
     "rollup-plugin-alias": "^1.2.0",
+    "rollup-plugin-async": "^1.2.0",
     "rollup-plugin-babel": "^2.6.1",
+    "rollup-plugin-buble": "^0.14.0",
     "rollup-plugin-commonjs": "^5.0.5",
-    "rollup-plugin-istanbul": "^1.1.0",
     "rollup-plugin-flow-no-whitespace": "^1.0.0",
+    "rollup-plugin-istanbul": "^1.1.0",
     "rollup-plugin-json": "^2.0.2",
     "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-plugin-regenerator": "^0.3.0",
@@ -42,16 +37,23 @@
     "rollup-plugin-uglify": "^1.0.1",
     "rollup-watch": "^2.5.0",
     "uglify-js": "^2.7.4",
-    "virtual-dom": "^2.1.1",
-    "way": "^0.3.0",
     "webpack": "^1.13.3",
-    "whatwg-fetch": "^2.0.1",
-    "winbonshello": "^1.0.0",
-    "rollup-plugin-buble": "^0.14.0"
+    "whatwg-fetch": "^2.0.1"
   },
-  "devDependencies": {},
+  "dependencies": {
+    "core-decorators": "^0.14.0",
+    "director": "^1.2.8",
+    "events": "^1.1.1",
+    "hyperx": "^2.0.5",
+    "jquery": "^3.1.1",
+    "lego-core": "0.1.0",
+    "object.observe": "^0.2.6",
+    "perfect-scrollbar": "^0.6.14",
+    "virtual-dom": "^2.1.1"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "node build/build.js"
   },
   "keywords": [
     "legojs-ui",
