--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "legojs-ui",
+  "name": "lego-ui",
   "version": "0.0.1",
   "description": "legojs ui library",
-  "main": "dist/legoui.js",
+  "main": "components/legoui-all.min.js",
   "directories": {
     "example": "example"
   },
