--- a/example/package.json
+++ b/example/package.json
@@ -28,9 +28,11 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "json-loader": "^0.5.4",
+    "node-sass": "^4.1.1",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7"
+    "url-loader": "^0.5.7",
+    "webpack": "^1.14.0"
   },
   "dependencies": {
     "core-decorators": "^0.14.0",
