--- a/package.json
+++ b/package.json
@@ -21,24 +21,32 @@
     "buble": "^0.14.2",
     "core-decorators": "^0.14.0",
     "css-loader": "^0.25.0",
+    "cssnano": "^3.9.1",
     "eslint": "^3.11.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "fs": "0.0.1-security",
     "json-loader": "^0.5.4",
+    "lego-core": "^0.2.0",
+    "livereload": "^0.6.0",
     "lodash": "^4.17.2",
     "node-sass": "^4.1.0",
     "perfect-scrollbar": "^0.6.14",
+    "postcss-cssnext": "^2.9.0",
+    "postcss-nested": "^1.0.0",
+    "postcss-simple-vars": "^3.0.0",
     "rollup": "^0.36.4",
     "rollup-plugin-alias": "^1.2.0",
     "rollup-plugin-async": "^1.2.0",
     "rollup-plugin-babel": "^2.6.1",
     "rollup-plugin-buble": "^0.14.0",
     "rollup-plugin-commonjs": "^5.0.5",
+    "rollup-plugin-eslint": "^3.0.0",
     "rollup-plugin-flow-no-whitespace": "^1.0.0",
     "rollup-plugin-istanbul": "^1.1.0",
     "rollup-plugin-json": "^2.0.2",
     "rollup-plugin-node-resolve": "^2.0.0",
+    "rollup-plugin-postcss": "^0.2.0",
     "rollup-plugin-regenerator": "^0.3.0",
     "rollup-plugin-replace": "^1.1.1",
     "rollup-plugin-uglify": "^1.0.1",
