--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "rollup-plugin-postcss": "^0.2.0",
     "rollup-plugin-regenerator": "^0.3.0",
     "rollup-plugin-replace": "^1.1.1",
+    "rollup-plugin-sass": "^0.4.8",
     "rollup-plugin-uglify": "^1.0.1",
     "rollup-watch": "^2.5.0",
     "sass-loader": "^4.0.2",
