--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "lego-ui",
-  "version": "0.0.4",
+  "version": "0.1.0",
   "description": "legojs ui library",
-  "main": "dist/lego-ui.js",
+  "main": "dist/legoui-all.min.js",
   "directories": {
     "example": "example"
   },
@@ -11,6 +11,7 @@
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.8",
     "babel-plugin-external-helpers": "^6.18.0",
+    "babel-plugin-import": "^1.1.0",
     "babel-plugin-syntax-async-generators": "^6.13.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-polyfill": "^6.16.0",
