--- a/example/package.json
+++ b/example/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-loader": "^6.2.7",
+    "babel-plugin-import": "^1.1.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
