--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "rollup-plugin-alias": "^1.2.0",
     "rollup-plugin-async": "^1.2.0",
     "rollup-plugin-babel": "^2.6.1",
+    "rollup-plugin-buba": "^1.0.1",
     "rollup-plugin-buble": "^0.14.0",
     "rollup-plugin-commonjs": "^5.0.5",
     "rollup-plugin-eslint": "^3.0.0",
