--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "rollup-plugin-buba": "^1.0.1",
     "rollup-plugin-buble": "^0.14.0",
     "rollup-plugin-commonjs": "^5.0.5",
+    "rollup-plugin-css-only": "^0.2.0",
     "rollup-plugin-eslint": "^3.0.0",
     "rollup-plugin-flow-no-whitespace": "^1.0.0",
     "rollup-plugin-istanbul": "^1.1.0",
@@ -53,6 +54,7 @@
     "rollup-plugin-regenerator": "^0.3.0",
     "rollup-plugin-replace": "^1.1.1",
     "rollup-plugin-sass": "^0.4.8",
+    "rollup-plugin-scss": "^0.2.0",
     "rollup-plugin-uglify": "^1.0.1",
     "rollup-watch": "^2.5.0",
     "sass-loader": "^4.0.2",
