--- a/example/package.json
+++ b/example/package.json
@@ -43,6 +43,7 @@
     "jquery": "^3.1.1",
     "lego-core": "^0.3.8",
     "lego-ui": "^0.1.2",
+    "lodash": "^4.17.3",
     "object.observe": "^0.2.6",
     "showdown": "^1.5.4",
     "virtual-dom": "^2.1.1"
