--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
   "dependencies": {
     "highlight.js": "^9.9.0",
     "lego-core": "^0.3.8",
+    "lodash": "^4.17.3",
     "showdown": "^1.5.4"
   },
   "scripts": {
