--- a/package.json
+++ b/package.json
@@ -63,9 +63,10 @@
   },
   "dependencies": {
     "highlight.js": "^9.9.0",
-    "lego-core": "^0.4.4",
+    "lego-core": "^0.4.5",
     "lodash": "^4.17.3",
-    "showdown": "^1.5.4"
+    "showdown": "^1.5.4",
+    "toastr": "^2.1.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
