--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "whatwg-fetch": "^2.0.1"
   },
   "dependencies": {
+    "eonasdan-bootstrap-datetimepicker": "^4.17.43",
     "highlight.js": "^9.9.0",
     "lego-core": "^0.5.3",
     "lodash": "^4.17.3",
