--- a/example/package.json
+++ b/example/package.json
@@ -41,9 +41,10 @@
     "events": "^1.1.1",
     "highlight.js": "^9.9.0",
     "jquery": "^3.1.1",
-    "lego-core": "^0.5.3",
+    "lego-core": "^0.6.0",
     "lego-ui": "^0.1.6",
     "lodash": "^4.17.3",
+    "moment": "^2.17.1",
     "object.observe": "^0.2.6",
     "showdown": "^1.5.4",
     "virtual-dom": "^2.1.1"
