--- a/example/package.json
+++ b/example/package.json
@@ -38,10 +38,12 @@
   "dependencies": {
     "core-decorators": "^0.14.0",
     "director": "^1.2.8",
+    "eonasdan-bootstrap-datetimepicker": "^4.17.43",
+    "eonasdan-bootstrap-datetimepicker-custom": "^4.17.39",
     "events": "^1.1.1",
     "highlight.js": "^9.9.0",
     "jquery": "^3.1.1",
-    "lego-core": "^0.6.0",
+    "lego-core": "^0.6.1",
     "lego-ui": "^0.1.6",
     "lodash": "^4.17.3",
     "moment": "^2.17.1",
