--- a/example/package.json
+++ b/example/package.json
@@ -36,19 +36,19 @@
     "webpack": "^1.14.0"
   },
   "dependencies": {
+    "bootstrap-datetimepicker-cjs": "0.0.2",
     "core-decorators": "^0.14.0",
     "director": "^1.2.8",
-    "eonasdan-bootstrap-datetimepicker": "^4.17.43",
-    "eonasdan-bootstrap-datetimepicker-custom": "^4.17.39",
     "events": "^1.1.1",
     "highlight.js": "^9.9.0",
     "jquery": "^3.1.1",
-    "lego-core": "^0.6.1",
-    "lego-ui": "^0.1.6",
+    "lego-core": "^0.6.5",
+    "lego-ui": "^0.1.9",
     "lodash": "^4.17.3",
     "moment": "^2.17.1",
     "object.observe": "^0.2.6",
     "showdown": "^1.5.4",
+    "tether": "^1.4.0",
     "virtual-dom": "^2.1.1"
   }
 }
