--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lego-ui",
-  "version": "0.1.6",
+  "version": "0.2.0",
   "description": "legojs ui library",
   "main": "dist/legoui.js",
   "directories": {
@@ -62,13 +62,13 @@
     "whatwg-fetch": "^2.0.1"
   },
   "dependencies": {
-    "eonasdan-bootstrap-datetimepicker": "^4.17.43",
-    "eonasdan-bootstrap-datetimepicker-custom": "^4.17.39",
+    "bootstrap-datetimepicker-cjs": "0.0.2",
     "highlight.js": "^9.9.0",
-    "lego-core": "^0.6.1",
+    "lego-core": "^0.6.5",
     "lodash": "^4.17.3",
     "moment": "^2.17.1",
     "showdown": "^1.5.4",
+    "tether": "^1.4.0",
     "toastr": "^2.1.2"
   },
   "scripts": {
