--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
     "moment": "^2.17.1",
     "showdown": "^1.5.4",
     "tether": "^1.4.0",
-    "toastr": "^2.1.2"
+    "toastr": "^2.1.2",
+    "ztree": "^3.5.24"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
