--- a/example/package.json
+++ b/example/package.json
@@ -42,13 +42,15 @@
     "events": "^1.1.1",
     "highlight.js": "^9.9.0",
     "jquery": "^3.1.1",
-    "lego-core": "^0.6.5",
+    "lego-core": "^0.6.9",
     "lego-ui": "^0.1.9",
     "lodash": "^4.17.3",
     "moment": "^2.17.1",
     "object.observe": "^0.2.6",
     "showdown": "^1.5.4",
     "tether": "^1.4.0",
-    "virtual-dom": "^2.1.1"
+    "toastr": "^2.1.2",
+    "virtual-dom": "^2.1.1",
+    "ztree": "^3.5.24"
   }
 }
