--- a/package.json
+++ b/package.json
@@ -63,8 +63,9 @@
   },
   "dependencies": {
     "bootstrap-datetimepicker-cjs": "0.0.2",
+    "font-awesome": "^4.7.0",
     "highlight.js": "^9.9.0",
-    "lego-core": "^0.6.5",
+    "lego-core": "^0.6.9",
     "lodash": "^4.17.3",
     "moment": "^2.17.1",
     "showdown": "^1.5.4",
