--- a/example/package.json
+++ b/example/package.json
@@ -42,6 +42,7 @@
     "events": "^1.1.1",
     "highlight.js": "^9.9.0",
     "jquery": "^3.1.1",
+    "jquery-validation": "^1.16.0",
     "lego-core": "^0.6.9",
     "lego-ui": "^0.1.9",
     "lodash": "^4.17.3",
