--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
   "dependencies": {
     "bootstrap-datetimepicker-cjs": "0.0.2",
     "highlight.js": "^9.9.0",
-    "jquery-validation": "^1.16.0",
+    "jquery-validation-cjs": "^1.0.0",
     "lego-core": "^0.6.9",
     "lodash": "^4.17.3",
     "moment": "^2.17.1",
