--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lego-ui",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "legojs ui library",
   "main": "dist/legoui.js",
   "directories": {
@@ -65,7 +65,8 @@
     "bootstrap-datetimepicker-cjs": "0.0.2",
     "highlight.js": "^9.9.0",
     "jquery-validation-cjs": "^1.0.0",
-    "lego-core": "^0.6.9",
+    "lego-core": "^0.7.0",
+    "localresizeimg-cjs": "^1.0.0",
     "lodash": "^4.17.3",
     "moment": "^2.17.1",
     "showdown": "^1.5.4",
