--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lego-ui",
-  "version": "0.2.1",
+  "version": "0.2.3",
   "description": "legojs ui library",
   "main": "dist/legoui.js",
   "directories": {
@@ -71,7 +71,7 @@
     "moment": "^2.17.1",
     "showdown": "^1.5.4",
     "tether": "^1.4.0",
-    "toastr": "^2.1.2",
+    "toastr-cjs": "^1.0.2",
     "ztree": "^3.5.24"
   },
   "scripts": {
