--- a/example/.babelrc
+++ b/example/.babelrc
@@ -1,8 +1,7 @@
 {
 	"plugins": [
   		"transform-decorators",
-  		"syntax-async-generators",
-  		["import", { libraryName: "lego-ui", "libraryDirectory": "dist" }]
+  		"syntax-async-generators"
   	],
 	"presets": [["es2015", { "modules": false }], "stage-0", "stage-3"]
 }
