--- a/example/package.json
+++ b/example/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "bootstrap-datetimepicker-cjs": "0.0.2",
+    "bootstrap-rating": "0.0.1",
     "core-decorators": "^0.14.0",
     "director": "^1.2.8",
     "events": "^1.1.1",
