--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
   "dependencies": {
     "bootstrap-datetimepicker-cjs": "0.0.3",
     "bootstrap-rating": "0.0.1",
+    "bootstrap-slider": "^9.8.0",
     "font-awesome": "^4.7.0",
     "highlight.js": "^9.9.0",
     "jquery-validation-cjs": "^1.0.0",
