--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lego-ui",
-  "version": "0.9.52",
+  "version": "0.9.54",
   "description": "基于legojs的基础组件库",
   "main": "dist/legoui.js",
   "directories": {
@@ -14,8 +14,10 @@
     "babel-plugin-import": "^1.1.0",
     "babel-plugin-syntax-async-generators": "^6.13.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
+    "babel-preset-es2015-rollup": "^3.0.0",
     "babel-preset-stage-0": "^6.16.0",
     "babel-register": "^6.18.0",
     "babelrc-rollup": "^3.0.0",
