--- a/example/package.json
+++ b/example/package.json
@@ -33,7 +33,8 @@
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.14.0"
+    "webpack": "^1.14.0",
+    "whatwg-fetch": "^2.0.3"
   },
   "dependencies": {
     "bootstrap-datetimepicker-cjs": "0.0.3",
@@ -45,7 +46,7 @@
     "events": "^1.1.1",
     "highlight.js": "^9.9.0",
     "jquery": "^3.1.1",
-    "lego-core": "^1.11.9",
+    "lego-core": "^1.12.44",
     "lego-ui": "^0.3.36",
     "lodash": "^4.17.3",
     "moment": "^2.17.1",
