--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lego-ui",
-  "version": "0.10.3",
+  "version": "0.10.14",
   "description": "基于legojs的基础组件库",
   "main": "dist/legoui.js",
   "directories": {
@@ -69,6 +69,7 @@
     "bootstrap-slider": "^9.8.0",
     "font-awesome": "^4.7.0",
     "highlight.js": "^9.9.0",
+    "html5-history-api": "^4.2.8",
     "jquery-validation-cjs": "^1.0.0",
     "lego-core": "^1.10.16",
     "localresizeimg-cjs": "^1.0.3",
