--- a/example/package.json
+++ b/example/package.json
@@ -40,6 +40,7 @@
     "bootstrap-datetimepicker-cjs": "0.0.3",
     "bootstrap-rating": "0.0.1",
     "com-areapicker": "0.0.27",
+    "com-colorpicker": "0.0.11",
     "com-geolocation": "0.0.34",
     "core-decorators": "^0.14.0",
     "director": "^1.2.8",
